fix: extra whitespace in page on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Poppins:ital,wght@0,200;0,300;0,500;0,600;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Poiret+One&family=Poppins:ital,wght@0,200;0,300;0,500;0,600;0,900;1,400&display=swap');
 
 :root {
     --text-black: #111122;
@@ -18,6 +18,7 @@ body {
     display: grid;
     grid-auto-rows: max-content;
     align-items: center;
+    width: 100%;
 }
 
 /* Navbar */
@@ -29,13 +30,13 @@ nav {
         'logo links user';
     align-items: center;
     gap: 1.25rem;
+    padding: 0 2.25rem;
     font-family: 'Roboto';
     background-color: var(--cover);
 }
 
 .logo {
-    width: 10rem;
-    object-fit: cover;
+    font-family: 'Bungee Shade';
 }
 
 .nav__tabs {
@@ -204,7 +205,7 @@ a {
     display: grid;
     grid-auto-rows: max-content;
     justify-content: center;
-    padding: 2.5rem;
+    padding: 2.25rem;
 }
 
 .cards-container--featured {
@@ -226,6 +227,7 @@ a {
 }
 
 .featured__heading {
+    font-family: 'Bungee Shade';
     text-align: center;
     font-size: 3.5rem;
 }
